fix issue with clean files not showing filetype

--- a/src/App.css
+++ b/src/App.css
@@ -360,7 +360,3 @@ th {
   right: 0;
   top: 0;
   background: transparent url(../src/img/info-icon.svg) center center no-repeat; }
-
-  .trade-mark {
-    font-size: 1.3rem;
-  }
